# infomapmex

./: .gitmodules  CMakeLists.txt  README.md
infomap/: CMakeLists.txt
infomap/src/: CMakeLists.txt  CMakeLists2.txt  Infomap-igraph-interface.cpp  Infomap-igraph-interface.h
infomap/src/infomap/: CMakeLists.txt
infomap/src/io/: HierarchicalNetwork.h
src/: CMakeLists.txt  FileLogger.h  Graph.cpp  Graph.h  infomapmex.cpp
